# automatic-TS-emmc-Writer

./: 99-mmcblk-devices.rules  dtbHandle.sh  emmcPrepare.sh  emmcWriter.py  emmcWriter.service  main.py  projectHistory.txt  sun8i-h3-nanopi-neo.dts  sun8i-h3-nanopi-neo2.dts  sun8i-h3-nanopi-neo_original.dts  uboot.py
PyIODriver/: README.md  i2c_gpio.py  main.py
remoteCtrlServer/: httpserver.py  udpService.py
remoteCtrlServer/html/: index.html  styles.css
spi/: main.py  oled.py
spi/OLED_Module_Code/: Version_CN.txt  Version_EN.txt
spi/OLED_Module_Code/Arduino/OLED_0in49/: DEV_Config.cpp  DEV_Config.h  GUI_Paint.cpp  ImageData.cpp  ImageData.h  OLED_0in49.cpp  OLED_0in49.h  OLED_0in49.ino  Readme.txt
spi/OLED_Module_Code/Arduino/OLED_0in96_rgb/: DEV_Config.cpp  GUI_Paint.cpp  ImageData.c  ImageData.h  OLED_0in96_rgb.ino  OLED_Driver.cpp  OLED_Driver.h
spi/OLED_Module_Code/Arduino/OLED_1in27_rgb/: GUI_Paint.cpp  OLED_1in27_rgb.ino  OLED_Driver.cpp  OLED_Driver.h
spi/OLED_Module_Code/Arduino/OLED_1in32/: ImageData.c  ImageData.h  (+3 more)
spi/OLED_Module_Code/Pico/c/OLED_0in49/: CMakeLists.txt  OLED_0in49.c
spi/OLED_Module_Code/Pico/c/OLED_0in49/examples/: CMakeLists.txt  ImageData.c  OLED_0in49_test.c  OLED_Test.h
spi/OLED_Module_Code/Pico/c/OLED_0in49/lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
spi/OLED_Module_Code/Pico/c/OLED_0in49/lib/Fonts/: CMakeLists.txt  font12CN.c  fonts.h
spi/OLED_Module_Code/Pico/c/OLED_0in49/lib/GUI/: CMakeLists.txt  GUI_Paint.c
spi/OLED_Module_Code/Pico/c/OLED_0in49/lib/OLED/: CMakeLists.txt  OLED_0in49.c  OLED_0in49.h
spi/OLED_Module_Code/Pico/c/OLED_0in49/uf2/: OLED_0in49.uf2
spi/lib/: OLED_1in5_rgb.py
spi/lib/waveshare_OLED/: OLED_0in95_rgb.py  OLED_0in96.py  OLED_1in27_rgb.py
(+138 files in other folders)
